Fixed spacing issues on phone version.

--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,6 @@ body {
   margin: 0;
   background: radial-gradient(circle, white 0%, #4D5B9E 100%);
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 button {
@@ -14,11 +11,15 @@ button {
 }
 
 main {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
 .main-phone {
-  padding: 3rem 3rem 3rem 3rem;
+  display: initial;
 }
 
 .main-title {
@@ -74,6 +75,10 @@ main {
 .main-button:hover {
   background-color: #33449a;
   font-size: 1rem;
+}
+
+.question-container-phone {
+  padding: 0px 3rem 0px 3rem;
 }
 
 .question {
@@ -180,7 +185,7 @@ main {
   font-size: 1.8rem;
   font-weight: 500;
   transition: 0.3s;
-  margin-top: 2rem;
+  margin: 2rem 0rem 2rem 0rem;
 }
 
 .question-splitter {
@@ -206,7 +211,7 @@ main {
 .endgame-message-phone {
   font-family: 'Inter', Arial;
   font-size: 1.8rem;
-  margin-right: 2rem;
+  margin: 0rem 2rem 3rem 0rem;
 }
 
 .play-again-button {
@@ -238,6 +243,7 @@ main {
   font-size: 1.6rem;
   font-weight: 500;
   transition: 0.3s;
+  margin-bottom: 3rem;
 }
 
 @media (max-width: 600px) {
